--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="content">
             <header>
             <img src="/assets/logo.svg" alt="Logomarca">
-                <a href="http://google.com">
+                <a href="create-point.html">
                     <samp></samp>
                     Cadastre um ponto de coleta
                 </a>
@@ -37,7 +37,7 @@
                 <a href="#">Fechar</a>
                              
             </div>
-            <form action="">
+            <form action="search-results.html">
                 <label for="search">Cidade</label>
                 <div class="search field">
                     <input type="text" name="search" placeholder="Pesquise por Cidade">
